--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,4 +1,10 @@
 .sidebar{
+
+    position: fixed;
+    height: 100vh;
+    top: 12%;
+    z-index: 100;
+
     
     background-color: #212121;
     width: 15vw;
