--- a/src/VideoCard.css
+++ b/src/VideoCard.css
@@ -3,6 +3,7 @@
 }
 .lower{
     display: flex;
+    width: 100%;
     
     font-size: 12px;
     color: #aeaeae;
@@ -17,15 +18,18 @@
     border-radius: 100px;
 }
 .videoCard{
-    width: 300px;
+    width: 270px;
     height: 280px;
     margin-top: 200px;
     color:white;
-    margin: 20px 5px;
+    margin: 20px 20px;
 }
 .videoCard:hover{
     background-color: black;
     cursor: pointer;
+    transition: transform 0.5s ease-in-out;
+    transform: scale(110%);
+    transition-delay: 1s;
 }
 .videoTitle{
     margin-left: 20px;
