--- a/src/header.css
+++ b/src/header.css
@@ -2,10 +2,11 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 100 ;
     background-color: rgba(33, 33, 33, 1.98);
+    width: 100vw;
 }
 .header_logo{
     margin-left: 25px;
